--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -85,6 +85,8 @@ paths:
           in: query
           schema: 
             type: string
+            minLength: 3
+            maxLength: 16
             pattern: '^[a-zA-Z0-9_.]*$'
             example: Maria
           description: User username.
@@ -150,6 +152,9 @@ paths:
           in: query
           schema: 
             type: string
+            pattern: ^[a-zA-Z0-9]*$'
+            minLength: 8
+            maxLength: 8
           required: true
       responses:
         '204':
@@ -167,6 +172,9 @@ paths:
         in: path
         schema:
           type: string
+          pattern: ^[a-zA-Z0-9_.]*$'
+          minLength: 3
+          maxLength: 16
           example: Maria
         required: true
         description: Username's name.
@@ -241,6 +249,10 @@ paths:
         in: path
         schema:
           type: string
+          example: Maria
+          pattern: ^[a-zA-Z0-9_.]*$'
+          minLength: 3
+          maxLength: 16
         required: true
         description: Username's identifier.
     post:
@@ -319,6 +331,9 @@ paths:
       in: path
       schema:
         type: string
+        pattern: ^[a-zA-Z0-9]*$'
+        minLength: 8
+        maxLength: 8
       required: true
       description: Photo's identifier.
     post:
@@ -373,6 +388,10 @@ paths:
       in: path
       schema:
         type: string
+        example: Maria
+        pattern: ^[a-zA-Z0-9]*$'
+        minLength: 8
+        maxLength: 8
       required: true
       description: Photo's identifier.
     post:
@@ -416,6 +435,9 @@ paths:
         - name: idCommento
           schema:
             type: string
+            pattern: ^[a-zA-Z0-9]*$'
+            minLength: 8
+            maxLength: 8
           in: query
           required: true
       responses:
@@ -461,9 +483,6 @@ components:
     bearerAuth:
       type: http
       scheme: bearer
-  responses:
-    UnauthorizedError:
-      description: Access username is missing or invalid.
   schemas:  
     userProfile:
       title: User's Profile
@@ -557,6 +576,7 @@ components:
       properties:
         text:
           type: string
+          pattern: '^[a-zA-Z0-9_.,!?:;""$%&€()[{}]]*$'
           minLength: 1
           maxLength: 250
           example: Bella foto!!
