--- a/doc/api.yaml
+++ b/doc/api.yaml
@@ -8,11 +8,9 @@ info:
 tags: 
   - name: "Login"
     description: "Login operations"
-  - name: "Operations"
+  - name: "Profile operations"
     description: "Profile operations"
-  - name: "Photo operations"
-    description: "Photo operations"
-  - name: "Social operations"
+  - name: "Interactions with other users"
     description: "Social operations"
   - name: "Feed operations"
     description: "Feed operations"
@@ -42,38 +40,8 @@ paths:
               schema:
                 $ref: '#/components/schemas/success'              
   /profile:
-    put:
-      tags: ["Operations"]
-      summary: Changes the username
-      description: |
-        Lets user to change their username with another one.
-        If the username isn't free, an error will return.
-      operationId: setMyUserName
-      security:
-        - bearerAuth: []
-      requestBody:
-        description: New username
-        content:
-          application/json:
-            schema:
-              $ref: '#/components/schemas/newUsername'
-        required: true
-      responses:
-        '201':
-          description: |
-            Username changed successfully.
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/username'
-        '409':
-          description: |
-            This username is already used by another user.
-        '401':
-          description: |
-            Unauthorized access.
     get:
-      tags: ["Operations"]
+      tags: ["Interactions with other users"]
       summary: Search users
       description: |
         Retrieves all users that match the username passed in the query. If the feedPageId is not passed, the first page will returned.
@@ -109,79 +77,41 @@ paths:
         '401':
           description: |
             Unauthorized access.
-  /photo:  
-    post:
-      tags: ["Photo operations"]
-      summary: Upload a new photo
+  /profile/{username}:
+    parameters:
+      - {$ref: '#components/parameters/username'}
+    put:
+      tags: ["Profile operations"]
+      summary: Changes the username
       description: |
-        Lets user to upload a new photo in their profile.
-      operationId: uploadPhoto
+        Lets user to change their username with another one.
+        If the username isn't free, an error will return.
+      operationId: setMyUserName
       security:
         - bearerAuth: []
       requestBody:
-        description: New photo
+        description: New username
         content:
-          multipart/form-data:
+          application/json:
             schema:
-              $ref: '#/components/schemas/file'              
+              $ref: '#/components/schemas/newUsername'
         required: true
       responses:
         '201':
           description: |
-            File uploaded successfully.
+            Username changed successfully.
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/success'
-        '415':
+                $ref: '#/components/schemas/username'
+        '409':
           description: |
-            File format not supported.
+            This username is already used by another user.
         '401':
           description: |
             Unauthorized access.
-    delete:
-      tags: ["Photo operations"]
-      summary: Delete a photo
-      description: |
-        Lets user to delete a photo.
-      operationId: deletePhoto
-      security:
-        - bearerAuth: []
-      parameters:
-        - name: idPhoto
-          in: query
-          schema: 
-            type: string
-            pattern: ^[a-zA-Z0-9]*$'
-            minLength: 8
-            maxLength: 8
-            description: Photo identifier.
-          required: true
-          description: Photo identifier.
-      responses:
-        '204':
-          description: |
-            File deleted successfully.
-        '404':
-          description: |
-            File not found.
-        '401':
-          description: |
-            Unauthorized access.
-  /search/{username}:
-    parameters:
-      - name: username
-        in: path
-        schema:
-          type: string
-          pattern: '^[a-zA-Z0-9_.]*$'
-          minLength: 3
-          maxLength: 16
-          example: Maria
-        required: true
-        description: Username's name.
     get:
-      tags: ["Social operations"]
+      tags: ["Interactions with other users"]
       summary: Retrive a user's profile
       description: |
         Returns the profile of the user passed as input in the path.
@@ -201,64 +131,68 @@ paths:
             Unauthorized access.
         '404':
           description: |
-            User not found.
+            User not found.    
+  /profile/{username}/photos:  
+    parameters:
+      - {$ref: '#components/parameters/username'}
     post:
-      tags: ["Social operations"]
-      summary: Follow a user
+      tags: ["Profile operations"]
+      summary: Upload a new photo
       description: |
-        Lets user to follow another user.
-      operationId: followUser
+        Lets user to upload a new photo in their profile.
+      operationId: uploadPhoto
       security:
         - bearerAuth: []
+      requestBody:
+        description: New photo
+        content:
+          image/*:
+            schema:
+              type: string
+              format: binary            
+        required: true
       responses:
         '201':
           description: |
-            User followed successfully.
+            File uploaded successfully.
           content:
             application/json:
               schema:
                 $ref: '#/components/schemas/success'
-        '404':
+        '415':
           description: |
-            User not found.
-        '409':
+            File format not supported.
+        '401':
           description: |
-            Unable to follow this user (you already follow he).
+            Unauthorized access.
+  /profile/{username}/photos/{photoId}:  
+    parameters:
+      - {$ref: '#/components/parameters/username'}
+      - {$ref: '#/components/parameters/photoId'}
     delete:
-      tags: ["Social operations"]
-      summary: Unfollow a user
+      tags: ["Profile operations"]
+      summary: Delete a photo
       description: |
-        Lets user to unfollow another user.
-      operationId: unfollowUser
+        Lets user to delete a photo.
+      operationId: deletePhoto
       security:
         - bearerAuth: []
       responses:
         '204':
           description: |
-            User unfollowed successfully.
+            File deleted successfully.
         '404':
           description: |
-            User not found.
-        '409':
-          description: |
-            Unable to unfollow this user (you don't follow this user).
+            File not found.
         '401':
           description: |
             Unauthorized access.
-  /search/{username}/status:
+  /profile/{username}/banned/{bannedUsername}:
     parameters:
-      - name: username
-        in: path
-        schema:
-          type: string
-          example: Maria
-          pattern: ^[a-zA-Z0-9_.]*$'
-          minLength: 3
-          maxLength: 16
-        required: true
-        description: Username's identifier.
-    post:
-      tags: ["Social operations"]
+      - {$ref: '#components/parameters/username'}
+      - {$ref: '#components/parameters/bannedUsername'}
+    put:
+      tags: ["Interactions with other users"]
       summary: Ban another user
       description: |
         Lets user to ban another user.
@@ -280,7 +214,7 @@ paths:
           description: |
             This user was already banned by you.
     delete:
-      tags: ["Social operations"]
+      tags: ["Interactions with other users"]
       summary: Unban another user
       description: |
         Lets user to unban another user.
@@ -297,6 +231,53 @@ paths:
         '409':
           description: |
             This user wasn't banned from you.
+  /search/{username}/following/{followedUsername}:
+    parameters:
+      - {$ref: '#components/parameters/username'}
+      - {$ref: '#components/parameters/followedUsername'}
+    put:
+      tags: ["Interactions with other users"]
+      summary: Follow a user
+      description: |
+        Lets user to follow another user.
+      operationId: followUser
+      security:
+        - bearerAuth: []
+      responses:
+        '201':
+          description: |
+            User followed successfully.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/success'
+        '404':
+          description: |
+            User not found.
+        '409':
+          description: |
+            Unable to follow this user (you already follow he).
+    delete:
+      tags: ["Interactions with other users"]
+      summary: Unfollow a user
+      description: |
+        Lets user to unfollow another user.
+      operationId: unfollowUser
+      security:
+        - bearerAuth: []
+      responses:
+        '204':
+          description: |
+            User unfollowed successfully.
+        '404':
+          description: |
+            User not found.
+        '409':
+          description: |
+            Unable to unfollow this user (you don't follow this user).
+        '401':
+          description: |
+            Unauthorized access.
   /feed:
     get:
       tags: ["Feed operations"]
@@ -327,18 +308,11 @@ paths:
         '401':
           description: |
             Unauthorized access.
-  /feed/{photo}/like:
+  /feed/{photo}/like/{username}:
     parameters:
-    - name: photo
-      in: path
-      schema:
-        type: string
-        pattern: ^[a-zA-Z0-9]*$'
-        minLength: 8
-        maxLength: 8
-      required: true
-      description: Photo's identifier.
-    post:
+      - {$ref: '#components/parameters/photoId'}
+      - {$ref: '#components/parameters/username'}
+    put:
       tags: ["Feed operations"]
       summary: Place a like
       description: |
@@ -384,19 +358,10 @@ paths:
         '409':
           description: |
             You didn't place a like on this photo.
-  /feed/{photo}/comment:
+  /feed/{photo}/comment/{username}:
     parameters:
-    - name: photo
-      in: path
-      schema:
-        type: string
-        example: ft75fg57
-        pattern: '^[a-zA-Z0-9]*$'
-        minLength: 8
-        maxLength: 8
-        description: Photo identifier.
-      required: true
-      description: Photo's identifier.
+      - {$ref: '#components/parameters/photoId'}
+      - {$ref: '#components/parameters/username'}
     post:
       tags: ["Feed operations"]
       summary: Place a comment
@@ -454,6 +419,20 @@ paths:
         '404':
           description: |
             Photo not found.
+  /feed/{photoId}/comments:
+    parameters:
+    - name: photoId
+      in: path
+      schema:
+        type: integer
+        description: Photo identifier.
+      required: true
+    - name: pageId
+      in: query
+      schema:
+        type: integer
+        description: Page identifier.
+      required: false
     get:
       tags: ["Feed operations"]
       summary: Retrive comments
@@ -462,13 +441,6 @@ paths:
       operationId: getComments
       security:
         - bearerAuth: []
-      parameters:
-        - name: commentsPageId
-          in: query
-          schema:
-            type: integer
-            description: Page identifier.
-          required: false
       responses:
         '200':
           description: |
@@ -488,6 +460,35 @@ components:
     bearerAuth:
       type: http
       scheme: bearer
+  parameters:
+    username: 
+      description: User's name.
+      name: username
+      in: path
+      required: true
+      schema:
+        type: string
+    bannedUsername:
+      description: Banned user's name.
+      name: bannedUsername
+      in: path
+      required: true
+      schema:
+        type: string
+    followedUsername:
+      description: Followed username.
+      name: followedUsername
+      in: path
+      required: true
+      schema:
+        type: string
+    photoId:
+      description: Photo identifier.
+      name: photoId
+      in: path
+      required: true
+      schema:
+        type: integer
   schemas:  
     userProfile:
       title: User's Profile
@@ -632,9 +633,8 @@ components:
           description: Upload date
           example: "2022-01-01T00:00:00Z"
         photo:  
-          type: string
-          format: binary
-          description: File.
+          type: integer
+          description: File identifier.
         numberOfLikes:
           type: integer
           example: 540
@@ -697,10 +697,4 @@ components:
           type: string
           example: Resource created
           description: Success message.
-    file: 
-      title: File
-      description: |
-        Represents a file.
-      type: string
-      format: binary
               
